# arcanoid-game

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  game.cpp
.zed/: settings.json  tasks.json
diagrams/: 2.2.Canvas.Editor.diagram.mmd  2.3.Prototype.diagram.mmd  2.3.PrototypeExample.cpp  3.Class.diagram.of.project.mmd  3.Save.system.diagram.mmd  3.Slow.ball.bonus.diagram.mmd  ATM.diagram.2.1.mmd
scripts/: build.bat  clean.bat  rebuild.bat  run.bat
src/: Ball.cpp  Ball.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Platform.cpp  Platform.h  SaveSystem.cpp  SaveSystem.h
src/ECS/: Component.h  Components.h  ECSManager.cpp  ECSManager.h  Entity.h  System.h
src/ECS/Systems/: BallSpeedSystem.cpp  BallSpeedSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  ResizeSystem.cpp  ResizeSystem.h
